adjusted ui integration